aoc/day01/objects/AoC01_Module__c/AoC01_Module__c.object-meta.xml
<CustomObject>
    <label>AoC01 Module</label>
    <nameField>
        <displayFormat>AoC01-{0000}</displayFormat>
        <label>AoC01_Module Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AoC01 Modules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>