aoc/day01/objects/AoC01_Module__c/fields/Advent_of_Code_Problem__c.field-meta.xml
<CustomField>
    <fullName>Advent_of_Code_Problem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advent of Code Problem</label>
    <referenceTo>Advent_of_Code_Problem__c</referenceTo>
    <relationshipLabel>AoC01 Modules</relationshipLabel>
    <relationshipName>AoC01_Modules</relationshipName>
    <type>Lookup</type>
</CustomField>