aoc/day01/objects/AoC01_Module__c/fields/Fuel_for_Module__c.field-meta.xml
<CustomField>
    <fullName>Fuel_for_Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fuel for Module</label>
    <referenceTo>AoC01_Module__c</referenceTo>
    <relationshipLabel>AoC01 Modules</relationshipLabel>
    <relationshipName>Fuel_for_Module</relationshipName>
    <type>Lookup</type>
</CustomField>