aoc/day01/objects/AoC01_Module__c/fields/Needed_Fuel__c.field-meta.xml
<CustomField>
    <fullName>Needed_Fuel__c</fullName>
    <formula>MAX(FLOOR(Weight__c / 3) - 2, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Needed Fuel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>