aoc/day01/objects/AoC01_Module__c/fields/Needed_Fuel_Part_1__c.field-meta.xml
<CustomField>
    <fullName>Needed_Fuel_Part_1__c</fullName>
    <formula>IF(Only_Part_2__c, 0, Needed_Fuel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Needed Fuel Part 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>