aoc/day01/objects/AoC01_Module__c/fields/Only_Part_2__c.field-meta.xml
<CustomField>
    <fullName>Only_Part_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Only Part 2</label>
    <type>Checkbox</type>
</CustomField>